# tinayiluo_Rust_CLI_Binary_With_SQLite

./: AirlineSafetyDB.db  Cargo.toml  Makefile  README.md  query_log.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: etl_tests.rs
